bench-harbor/data/runs/cc90e551c9a247b086ac1e90851eff19/test_9c6dcde7ddeb.txt
/tests/test_runner.cpp:10:5: error: redefinition of 'int main()'
   10 | int main() {
      |     ^~~~
In file included from /tests/test_runner.cpp:5:
/app/solution.cpp:122:5: note: 'int main()' previously defined here
  122 | int main() {
      |     ^~~~
